--- a/app/locales/it.json
+++ b/app/locales/it.json
@@ -11,6 +11,9 @@
       "TITLE": "¿Quién es Scarlet Empress?",
       "TEXT_1": "¡Hola! Soy Marta, una costurera con 14 años de experiencia. Aunque no siempre de manera profesional, mis estudios en Diseño de Vestuario y Alta Costura me brindaron habilidades en patronaje a medida, historia de la moda y sastrería. He confeccionado trajes para teatro y eventos, desarrollando adaptabilidad y eficiencia. Mi pasión por la creatividad se refleja en proyectos multidisciplinarios, incluyendo el LARP, donde diseño prendas cómodas y duraderas.",
       "TEXT_2": "Estoy emocionada por colaborar y dar vida a tus visiones de diseño. Si buscas un diseño que cuente una historia, confeccionado con técnica experta y un toque creativo, ¡contacta conmigo y comencemos a crear algo único juntos!"
+    },
+    "CONTACT": {
+      "TITLE": "No dudes en contactar conmigo"
     }
   },
   "SERVICES": {
